--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -43,6 +43,8 @@ http {
         location / {
             root   html;
             index  index.html index.htm;
+           # proxy_set_header Upgrade $http_upgrade;
+            #proxy_set_header Connection "upgrade";
         }
 
         #error_page  404              /404.html;
